k8s/ingress-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinepik-ingress-monitoring
  namespace: monitoring
  annotations:
    # Removes routing path
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2      
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  # - host: cinepik.fun
    - http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-service
                port:
                  number: 9090
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3100
