k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinepik-ingress
  annotations:
    # Removes routing path
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    # - host: cinepik.fun
    - http:
        paths:
          - path: /catalog(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cinepik-catalog
                port:
                  number: 3001
          - path: /auth(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cinepik-auth
                port:
                  number: 3000
          - path: /keycloak(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: cinepik-keycloak
                port:
                  number: 8080
